Update do backend